use https for the test OParl system

--- a/test.html
+++ b/test.html
@@ -111,7 +111,7 @@ function testSystem(data) {
 //-----------------------------------------------------------------------
 
 function start() {
-	OParl.open('http://www.lwl-pch.sitzung-online.de/oi/oparl/1.0/system.asp', function (err, data) {
+	OParl.open('https://www.lwl-pch.sitzung-online.de/oi/oparl/1.0/system.asp', function (err, data) {
 		if (err !== null) {
 			error('Something went wrong: ' + err);
 		} else {
