prepare Agenda items

--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@ function error(text) {
 
 //-----------------------------------------------------------------------
 
-function testLocation(data) {
+function testLocation(data, callback) {
 	'use strict';
 
 	log();
@@ -37,6 +37,8 @@ function testLocation(data) {
 	log('Room: ' + data.room);
 	log('Locality: ' + data.locality + ' - ' + data.subLocality);
 	log('ZIP: ' + data.postalCode);
+
+	callback();
 }
 
 //-----------------------------------------------------------------------
@@ -55,7 +57,7 @@ function testMembership(data, callback) {
 
 //-----------------------------------------------------------------------
 
-function testParticipant(data) {
+function testParticipant(data, callback) {
 	'use strict';
 
 	log();
@@ -84,7 +86,7 @@ function testParticipant(data) {
 								if (err !== null) {
 									error('Something went wrong: ' + err);
 								} else {
-									testLocation(dataLocation);
+									testLocation(dataLocation, callback);
 								}
 							});
 						});
@@ -135,7 +137,17 @@ function testMeeting(data) {
 											if (err !== null) {
 												error('Something went wrong: ' + err);
 											} else {
-												testParticipant(dataParticipant);
+												testParticipant(dataParticipant, function () {
+													if (dataAgendaItemList.length > 0) {
+														dataAgendaItemList[0].get(function (err, dataAgendaItem) {
+															if (err !== null) {
+																error('Something went wrong: ' + err);
+															} else {
+																testAgendaItem(dataAgendaItem);
+															}
+														});
+													}
+												});
 											}
 										});
 									}
@@ -275,8 +287,9 @@ function testBody(data) {
 															}
 														});
 													} else {
-														if (dataOrganizationList.length > 0) {
-															dataOrganizationList[0].get(function (err, dataOrganization) {
+														var orga = 6;
+														if (dataOrganizationList.length > orga) {
+															dataOrganizationList[orga].get(function (err, dataOrganization) {
 																if (err !== null) {
 																	error('Something went wrong: ' + err);
 																} else {
